fixed horizontal scroll issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,9 +51,7 @@ iframe {
   left:0;
   right:0;
   top:0;
-  overflow: hidden;
   padding-bottom: 120px;
-	
 }
 
 .heading {
@@ -124,6 +122,7 @@ a:visited {
 	left:350px;
 	margin-bottom: 100px;
 	right:0;
+	overflow:auto;
 	
 }
 
@@ -248,6 +247,7 @@ h1, h2 {
 
 #logoWrapper {
 	margin-top:5px;
+
 }
 
 #submitLink {
@@ -369,8 +369,8 @@ h1, h2 {
 
 
 .all_looks_wrapper {
-	width: 960px;
-	overflow: hidden;
+	width: 100%;
+	
 }
 
 .looks_wrapper img {
